# mace-jax

./: .gitignore  .mypy.ini  MIT.md  README.md  mace.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  torch_to_jax_parameters.ipynb
configs/: aspirin.gin  aspirin_small.gin  mace_mp_0b3.gin
data/: rmd17_aspirin_test.xyz  rmd17_aspirin_train.xyz
examples/: benchmark_inference.py  material_structures.json  model_initialization.ipynb  statistics.json
mace_jax/: __init__.py  nnx_config.py  nnx_utils.py  plot_train.py  run_train.py
mace_jax/adapters/cuequivariance/: __init__.py  fully_connected_tensor_product.py  ir_dict.py  ir_dict_vendor.py  linear.py  symmetric_contraction.py  tensor_product.py  utility.py
mace_jax/adapters/e3nn/math/: __init__.py  _normalize_activation.py
mace_jax/adapters/e3nn/nn/: __init__.py  _activation.py  _extract.py  _fc.py  _gate.py
mace_jax/adapters/e3nn/o3/: __init__.py  _spherical_harmonics.py
mace_jax/adapters/flax/: __init__.py  torch.py
mace_jax/adapters/nnx/: __init__.py  torch.py
mace_jax/calculators/: __init__.py  lammps_mliap_mace.py  mace.py  mace_jax_md.py
mace_jax/cli/: create_lammps_model.py  mace_jax_create_lammps_model.py  mace_jax_from_torch.py  mace_jax_hdf5_benchmark.py  mace_jax_hdf5_info.py  mace_jax_predict.py  mace_jax_train.py  mace_jax_train_plot.py  mace_torch2jax.py  preprocess_data.py
mace_jax/cuequivariance/: __init__.py  linear.py  tensor_product.py
mace_jax/data/: __init__.py  atomic_data.py  dynamically_batch.py  hdf5_dataset.py  neighborhood.py  streaming_loader.py  streaming_stats_cache.py  utils.py
mace_jax/e3nn/: __init__.py  _linear.py  tensor_product.py
mace_jax/e3nn/_tensor_product/: __init__.py  _codegen.py  _instruction.py  _sub.py  _tensor_product.py
mace_jax/e3nn/math/: __init__.py  _normalize_activation.py
mace_jax/e3nn/nn/: __init__.py  _activation.py  _extract.py  _fc.py  _gate.py
mace_jax/e3nn/o3/: __init__.py  _spherical_harmonics.py
mace_jax/haiku/: activations.py  torch.py  utility.py
mace_jax/modules/: __init__.py  blocks.py  blocks_jax.py  embeddings.py  irreps_tools.py  loss.py  message_passing.py  models.py  radial.py  special.py  symmetric_contraction.py  utils.py  wrapper_ops.py
mace_jax/tools/: __init__.py  amsgrad.py  arg_parser.py  bundle.py  cg.py  device.py  dtype.py  dummyfy.py  foundation_models.py  gin_datasets.py  gin_functions.py  gin_model.py  import_from_torch.py  jax_tools.py  lammps_exchange.py  model_builder.py  predictors.py  scatter.py  tools.py  torch_load_utils.py  torch_tools.py  train.py  utils.py
mace_jax/tools/torch_geometric/: dataloader.py
playground/: benchmark_inference.py  download_structures.py  model_initialization.ipynb
scripts/: config.gin  eval_configs.py  plot_train.ipynb  plot_train.py  run_aspirin_smoke_test.py  run_checks.sh  run_md.py  run_train.py  utils.py
tests/: conftest.py  test_atomic_energies_block.py  test_blocks.py  test_bundle_roundtrip.py  test_cg.py  test_cli_scripts.py  test_component_imports.py  test_contraction.py  test_cue_linear.py  test_data.py  test_e3nn.py  test_embeddings.py  test_fc_layer_act_scale.py  test_fully_connected_net.py  test_fully_connected_tensor_product.py  test_gate.py  test_gin_training.py  test_hdf5_compatibility.py  test_import_torch_weights.py  test_irreps_tools.py  test_jax.py  test_lammps_exchange.py  test_lammps_mliap.py  test_linear_parity.py  test_loss.py  test_mace_jax_calculator.py  test_model.py  test_models.py  test_modules.py  test_pair_repulsion.py  test_radial.py  test_readout_fixture.py  test_scale_shift_block.py  test_scatter.py  test_special.py  test_swa.py  test_symmetric_contraction.py  test_tensor_product.py  test_tensor_product_fusion.py  test_tools.py  (+1 more)
tests/test_data/: simple.xyz
