[metadata]
name = mace_jax
version = attr: mace_jax.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    chex
    optax
    e3nn_jax
    numpy
    ase
    matscipy
    roundmantissa
    jraph
    jax
    dm-haiku
    gin-config
    unique_names_generator
    tqdm
    # for plotting:
    matplotlib
    pandas
