[metadata]
name = mace_jax
version = attr: mace_jax.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    chex
    optax
    e3nn_jax
    e3nn==0.4.4
    numpy
    ase
    matscipy
    roundmantissa
    jraph
    jax>=0.4.23
    flax
    cuequivariance
    cuequivariance-jax
    gin-config
    unique_names_generator
    tqdm
    # for plotting:
    matplotlib
    pandas

[options.extras_require]
gpu =
    cuequivariance-ops-cu12

[options.entry_points]
console_scripts =
    mace-torch2jax = mace_jax.cli.mace_torch2jax:main
    mace-create-lammps-model = mace_jax.cli.mace_jax_create_lammps_model:main
    mace-jax-train = mace_jax.cli.mace_jax_train:main
    mace-jax-train-plot = mace_jax.cli.mace_jax_train_plot:main
