[metadata]
name = mace_jax
version = attr: mace_jax.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    chex
    optax
    e3nn_jax
    e3nn==0.4.4
    numpy
    ase
    matscipy
    roundmantissa
    jraph
    jax>=0.4.23
    flax
    cuequivariance
    cuequivariance-jax
    gin-config
    unique_names_generator
    tqdm

[options.extras_require]
gpu =
    cuequivariance-ops-cu12
    cuequivariance-ops-jax-cu12
test =
    pytest
    pytest-xdist
    nox
plot =
    matplotlib
    pandas
conv_fusion =
    %(gpu)s

[options.entry_points]
console_scripts =
    mace-jax-hdf5-benchmark = mace_jax.cli.mace_jax_hdf5_benchmark:main
    mace-jax-from-torch = mace_jax.cli.mace_jax_from_torch:main
    mace-create-lammps-model = mace_jax.cli.mace_jax_create_lammps_model:main
    mace-jax-hdf5-info = mace_jax.cli.mace_jax_hdf5_info:main
    mace-jax-preprocess = mace_jax.cli.mace_jax_preprocess:main
    mace-jax-predict = mace_jax.cli.mace_jax_predict:main
    mace-jax-train = mace_jax.cli.mace_jax_train:main
    mace-jax-train-plot = mace_jax.cli.mace_jax_train_plot:main
